--- a/package.json
+++ b/package.json
@@ -2,9 +2,22 @@
   "name": "import-retry-plugin",
   "version": "1.0.0",
   "description": "dynamic import script with webpack4 ，when loading chunk error，retry it and break cdn ticks",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run build -- -w",
+    "appveyor:test": "npm run test",
+    "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js' --copy-files",
+    "clean": "del-cli dist",
+    "prepare": "npm run build",
+    "prebuild": "npm run clean",
+    "release": "standard-version",
+    "security": "nsp check",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
+    "travis:test": "npm run test -- --runInBand",
+    "travis:coverage": "npm run test:coverage -- --runInBand",
+    "webpack-defaults": "webpack-defaults"
   },
   "repository": {
     "type": "git",
@@ -15,5 +28,27 @@
   "bugs": {
     "url": "https://github.com/SinaMFE/import-retry-plugin/issues"
   },
-  "homepage": "https://github.com/SinaMFE/import-retry-plugin#readme"
+  "homepage": "https://github.com/SinaMFE/import-retry-plugin#readme",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-jest": "^21.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.0.0",
+    "babel-polyfill": "^6.0.0",
+    "babel-preset-env": "^1.0.0",
+    "cross-env": "^5.0.0",
+    "cz-conventional-changelog": "^2.1.0",
+    "del": "^3.0.0",
+    "del-cli": "^1.0.0",
+    "eslint": "^4.0.0",
+    "eslint-config-webpack": "^1.0.0",
+    "eslint-plugin-import": "^2.0.0",
+    "jest": "^21.2.1",
+    "lint-staged": "^5.0.0",
+    "memory-fs": "^0.4.0",
+    "nsp": "^2.0.0",
+    "pre-commit": "^1.0.0",
+    "standard-version": "^4.0.0",
+    "webpack": "^4.29.0",
+    "webpack-defaults": "^1.6.0"
+  }
 }
